<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="acra_comment_helper">If you\'d like, you can comment on how this error occurred.</string>
    <string name="acra_dialog_button_negative">Don\'t send</string>
    <string name="acra_dialog_button_neutral">View report</string>
    <string name="acra_dialog_button_positive">Send</string>
    <string name="acra_dialog_message">The app has experienced an unexpected error. Please send an error report to help fix the problem.\n\nYou can view the entire report before sending.</string>
    <string name="acra_dialog_title">Oops!</string>
    <string name="acra_email_address_helper">If you\'d like, you can enter your mail address to receive updates on your report.</string>

    <string name="action_back">Back</string>
    <string name="action_download">Download</string>

    <string name="app_name">kitshn</string>

    <string name="common_comment">Comment</string>
    <string name="common_email_address">Mail address</string>
    <string name="common_error_report">Error report</string>
    <string name="common_import_recipe">Import recipe</string>

    <string name="shortcuts_new_instance_label_long">Create new instance</string>
    <string name="shortcuts_new_instance_label_short">New instance</string>

    <string name="shortcuts_meal_plan_label_long">Open meal plan</string>
    <string name="shortcuts_meal_plan_label_short">Meal plan</string>

    <string name="shortcuts_shopping_label_long">Open shopping</string>
    <string name="shortcuts_shopping_label_short">Shopping</string>

    <string name="shortcuts_shopping_mode_label_long">Start shopping mode</string>
    <string name="shortcuts_shopping_mode_label_short">Shopping mode</string>

    <string name="shortcuts_books_label_long">Open books</string>
    <string name="shortcuts_books_label_short">Books</string>
</resources>
